config/owncloud/rendered/manifests/ingress-proxy.yaml
---
# Source: ocis/templates/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  namespace: owncloud
  labels:
    helm.sh/chart: ocis-0.7.0
    app.kubernetes.io/name: ocis
    app.kubernetes.io/instance: ocis
    app.kubernetes.io/version: "7.1.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: "drive.newjoy.ro"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 9200
